# inspeqtor

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE-docs.md  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json  zensical.toml
.github/actions/setup/: action.yaml
.github/actions/type_checking/: action.yaml
.github/workflows/: code-quality.yaml
0.1/: 404.html  index.html  sitemap.xml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api-reference/: index.html
0.1.0/dev/: index.html
0.1.0/developer/note_tempfile/: index.html
0.1.0/explanation/: index.html
0.1.0/guides/bayesian_optimization/: index.html
0.1.0/guides/dnn_to_bnn/: index.html
0.1.0/guides/working_memory/: index.html
0.1.0/search/: search_index.json
0.1.0/tutorials/overviews/: index.html
0.1.0/tutorials/tutorial_0001_dataset/: index.html
0.1.0/tutorials/tutorial_0002_control/: index.html
0.1.0/tutorials/tutorial_0003_cc/: index.html
0.1.0/tutorials/tutorial_0004_t1_characterization/: index.html
0.1.0/tutorials/tutorial_0005_ramsey_experiment/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/api-reference/: index.html
0.1.1/dev/: index.html
0.1.1/developer/note_tempfile/: index.html
0.1.1/explanation/: index.html
0.1.1/guides/bayesian_optimization/: index.html
0.1.1/guides/dnn_to_bnn/: index.html
0.1.1/guides/working_memory/: index.html
0.1.1/search/: search_index.json
0.1.1/tutorials/overviews/: index.html
0.1.1/tutorials/tutorial_0001_dataset/: index.html
0.1.1/tutorials/tutorial_0002_control/: index.html
0.1.1/tutorials/tutorial_0003_cc/: index.html
0.1.1/tutorials/tutorial_0004_t1_characterization/: index.html
0.1.1/tutorials/tutorial_0005_ramsey_experiment/: index.html
0.1/api-reference/: index.html
0.1/dev/: index.html
0.1/developer/note_tempfile/: index.html
0.1/explanation/: index.html
0.1/guides/bayesian_optimization/: index.html
0.1/guides/dnn_to_bnn/: index.html
0.1/guides/working_memory/: index.html
0.1/search/: search_index.json
0.1/tutorials/overviews/: index.html
0.1/tutorials/tutorial_0001_dataset/: index.html
0.1/tutorials/tutorial_0002_control/: index.html
0.1/tutorials/tutorial_0003_cc/: index.html
0.1/tutorials/tutorial_0004_t1_characterization/: index.html
0.1/tutorials/tutorial_0005_ramsey_experiment/: index.html
api-reference/: index.html
api/boed/: index.html
api/constant/: index.html
api/control/: index.html
api/data/: index.html
api/linen/: index.html
api/nnx/: index.html
api/optimize/: index.html
api/physics/: index.html
api/predefined/: index.html
api/probabilistic/: index.html
api/utils/: index.html
api/v1/all/: index.html
api/visualization/: index.html
dev/: index.html
developer/: README.md
developer/note_tempfile/: index.html
docs/: api-reference.md  dev.md  explanation.md  how-to-guides.md  index.md
docs/api/: boed.md  linen.md  nnx.md  predefined.md
docs/developer/: note_tempfile.ipynb
docs/guides/: bayesian_optimization.ipynb  bnn.ipynb  dnn_to_bnn.ipynb  dnn_to_bnn_v2.ipynb  gen_data.py  generate-dataset.md  working_memory.ipynb
docs/stylesheets/: extra.css
docs/tutorials/: overviews.md  tutorial_0001_dataset.ipynb  tutorial_0001_dataset_v2.ipynb  tutorial_0002_control.ipynb  tutorial_0003_cc.ipynb  tutorial_0003_cc_v2.ipynb  tutorial_0004_t1_characterization.ipynb  tutorial_0005_ramsey_experiment.ipynb
documents/: conf.py  index.rst  inspeqtor.experimental.rst  inspeqtor.legacy.rst  inspeqtor.legacy.utils.rst  inspeqtor.rst  modules.rst
documents/examples/: example_0001_hypertuner.ipynb  example_0002_nnx_graybox.ipynb  helper.py
documents/reviews/: helper.py  review_0001_jax.ipynb  review_0002_bayes_theorem.ipynb  review_0003_ppl_numpyro.ipynb  review_0003_revisit_coin_with_ppl.ipynb  review_0004_detuning.ipynb  review_0004_detuning.py  review_0005_search_target.ipynb  review_0006_working_memory.ipynb
documents/shared/: helper.py  shared_0001_regression_boed.ipynb  shared_0002_inspeqtor_dnn.ipynb  shared_0003_inspeqtor_bnn.ipynb  shared_0004_reparametrized_v3.ipynb
explanation/: index.html
guides/bayesian_optimization/: index.html
guides/dnn_to_bnn/: index.html
guides/gen_data/: index.html
guides/generate-dataset/: index.html
guides/working_memory/: index.html
llm-agent-guide/: index.html
mlruns/0/: meta.yaml
search/: search_index.json
src/inspeqtor/: __init__.py  data.py  hello.py  model_v2.py  optimizer.py  pennylane.py  physics.py  pulse.py  qiskit.py  torch.py  typing.py
tests/: pytest.toml  test_data.py  test_flow.py  test_model_v2.py  test_physics.py  test_pilot.py  test_pulse.py  test_qiskit.py
tests/experimental/: conftest.py  test_boed.py  test_control.py  test_data.py  test_model.py  test_physics.py  test_probabilistic.py  test_pulse.py  test_qiskit.py  test_utils.py
tests/legacy/: test_data.py  test_flow.py  test_model_v2.py  test_physics.py  test_pulse.py  test_qiskit.py
tests/v1/: conftest.py  test_boed.py  test_control.py  test_data.py  test_model.py  test_physics.py  test_probabilistic.py  test_utils.py
tests/v2/: test_control_v2.py  test_data_v2.py  test_models_v2.py  test_physics_v2.py  test_predefined_v2.py  test_utils_v2.py
tests/v3/: test_control_v3.py
tutorials/overviews/: index.html
tutorials/tutorial_0001_dataset/: index.html
tutorials/tutorial_0001_dataset_v2/: index.html
tutorials/tutorial_0002_control/: index.html
tutorials/tutorial_0003_cc/: index.html
tutorials/tutorial_0004_t1_characterization/: index.html
tutorials/tutorial_0005_ramsey_experiment/: index.html
(+177 files in other folders)
