[project]
name = "inspeqtor"
version = "0.1.0"
description = "A library for characterization and calibration of quantum device"
readme = "README.md"
authors = [
    { name = "PorametPat", email = "43396870+PorametPat@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.2",
    "jax>=0.4.35",
    "pandas-stubs>=2.2.3.241009",
    "pandas>=2.2.3",
    "optax>=0.2.4",
    "matplotlib>=3.9.2",
    "diffrax>=0.6.0",
    "numpyro>=0.16.0",
    "graphviz>=0.20.3",
    "funsor>=0.4.5",
    "deprecated>=1.2.18",
    "polars>=1.33.1",
]

[project.optional-dependencies]
docs = [
    "alive-progress>=3.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.16.1",
    "seaborn>=0.13.2",
    "treescope>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "chex>=0.1.87",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy>=1.15.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.404",
    "pytest>=8.3.3",
    "pytest-cov>=6.2.1",
    "typer>=0.15.2",
]

[tool.pyright]
exclude = [".venv", "./src/inspeqtor/legacy", "./tests/legacy", "./src/inspeqtor/legacy/external"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.uv.sources]
inspeqtor = { workspace = true }
