[project]
name = "inspeqtor"
version = "0.1.0"
description = "A library for characterization and calibration of quantum device"
readme = "README.md"
authors = [
    { name = "Poramet Pathumsoot", email = "poramet.path@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flax>=0.11.0",
    "jax>=0.4.35",
    "pandas-stubs>=2.2.3.241009",
    "pandas>=2.2.3",
    "optax>=0.2.4",
    "matplotlib>=3.9.2",
    "diffrax>=0.6.0",
    "numpyro>=0.16.0",
    "graphviz>=0.20.3",
    "funsor>=0.4.5",
    "deprecated>=1.2.18",
    "polars>=1.33.1",
    "gpjax>=0.12.2",
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "chex>=0.1.87",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "licensecheck>=2025.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.404",
    "pytest>=8.3.3",
    "pytest-cov>=6.2.1",
    "typer>=0.15.2",
]
docs = [
    "alive-progress>=3.3.0",
    "arviz>=0.22.0",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.6.22",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
    "seaborn>=0.13.2",
    "treescope>=0.1.10",
    "zensical>=0.0.7",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.uv.sources]
inspeqtor = { workspace = true }
